# rust-ai-sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: function_calling.rs  gemini.rs  stream.rs
src/: client.rs  cost.rs  error.rs  lib.rs  sse.rs  stream.rs  types.rs
src/providers/: cerebras.rs  claude.rs  gemini.rs  mod.rs  openai.rs
tests/: tokenipsum_integration.rs
